@@ -38,10 +38,10 @@ CARCASS.CARP.PREPARED.PLURAL,Fillets,,,,,,,,,,,,,,,,,,,
 CARCASS.CARP.RAW,Carp,,,,,,,,,,,,,,,,,,,
 CARCASS.PERCH.PREPARED.NOUN,Fillet,,,,,,,,,,,,,,,,,,,
 CARCASS.PERCH.PREPARED.PLURAL,Fillets,,,,,,,,,,,,,,,,,,,
-CARCASS.PERCH.RAW,Carp,,,,,,,,,,,,,,,,,,,
+CARCASS.PERCH.RAW,Perch,,,,,,,,,,,,,,,,,,,
 CARCASS.PIKE.PREPARED.NOUN,Fillet,,,,,,,,,,,,,,,,,,,
 CARCASS.PIKE.PREPARED.PLURAL,Fillets,,,,,,,,,,,,,,,,,,,
-CARCASS.PIKE.RAW,Carp,,,,,,,,,,,,,,,,,,,
+CARCASS.PIKE.RAW,Pike,,,,,,,,,,,,,,,,,,,
 
 CLOTH.HEMP-LINEN,Hemp,,,,,,,,,,,,,,,,,,,
 
@@ -374,6 +374,7 @@ GUI.LOAD_GAME.TABLE.GAME_TIME,World time,,Uhrzeit,,,,,,,,,,,,,,,,,
 GUI.LOAD_GAME.TABLE.SETTLEMENT_NAME,Name,,Name,,,,,,,,,,,,,,,,,
 GUI.LOAD_GAME.TABLE.VERSION,Version,,Version,,,,,,,,,,,,,,,,,
 GUI.LOAD_GAME.TITLE,Load Game,,Lade Spiel,,,,,,,,,,,,,,,,,
+GUI.MAP_SEED.COPY_TO_CLIPBOARD,Copy to clipboard,,,,,,,,,,,,,,,,,,,
 GUI.MAP_SEED_DISPLAY,"Current map seed: ",,,,,,,,,,,,,,,,,,,
 GUI.MECHANISM.SHAFT.HORIZONTAL,Horizontal,,,,,,,,,,,,,,,,,,,
 GUI.MECHANISM.SHAFT.VERTICAL,Vertical,,,,,,,,,,,,,,,,,,,
