@@ -12,9 +12,11 @@ Alpha 7
 - Beds now require linen to be constructed
 - Added sleeping spot to bedrooms to make up for more difficult bed requirements
 - Added fishing mechanic/jobs and re-implemented the fisher profession
+- Fish can be caught, prepared, and used in cooking soup
 - Fixed particle effects on furniture in use like Ore Crusher
 - Made settlers eat rations before other edible items in inventory
 - Made lightning very unlikely to strike plants other than trees
+- Moved map seed to options menu with copy to clipboard button
 - Updated dirt floor texture
 
 Alpha 6.1.7 - 5th September 2021
